Добавяне на AutoMapper

--- a/VocationManager/VocationManager.Web.csproj
+++ b/VocationManager/VocationManager.Web.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.14" />
@@ -20,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GlobalConstants\GlobalConstants.csproj" />
     <ProjectReference Include="..\VocationManager.Data\VocationManager.Data.csproj" />
     <ProjectReference Include="..\VocationManager.Services\VocationManager.Services.csproj" />
   </ItemGroup>
