--- a/GlobalConstants/GlobalConstants.csproj
+++ b/GlobalConstants/GlobalConstants.csproj
@@ -7,11 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="AutoMapper" Version="12.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\VocationManager.Data\VocationManager.Data.csproj" />
+    <ProjectReference Include="..\VocationManager.Services\VocationManager.Services.csproj" />
   </ItemGroup>
 
 </Project>
