Използване на Dropbox API за качване и сваляне на файлове

--- a/BusinessManager.Web/appsettings.json
+++ b/BusinessManager.Web/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=BusinessManager;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BusinessManager.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -9,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Dropbox": {
+    "API_Key": "***"
+  }
 }
