--- a/.gitignore
+++ b/.gitignore
@@ -350,3 +350,4 @@ MigrationBackup/
 .ionide/
 *.map
 BusinessManager.Web/appsettings.Development.json
+BusinessManager.Web/appsettings.Development.json
